--- a/src/main/resources/fxml/soki-menu.fxml
+++ b/src/main/resources/fxml/soki-menu.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="815.0" prefWidth="1169.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="soki.textadventure.controller.MenuController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="815.0" prefWidth="1169.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="soki.textadventure.controller.MenuController">
    <children>
       <GridPane layoutX="1.0" layoutY="1.0" prefHeight="815.0" prefWidth="1169.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
@@ -34,32 +34,64 @@
                 <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+                  <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints percentHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints prefHeight="50.0" vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button mnemonicParsing="false" onAction="#LoadGameMenu" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Load Game" textFill="LIME">
+                  <Button mnemonicParsing="false" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Neues Spiel" textFill="LIME">
                      <font>
                         <Font name="Monospaced Regular" size="30.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="New Game" textFill="LIME" GridPane.rowIndex="1">
+                  <Button mnemonicParsing="false" onAction="#LoadGameMenu" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Spiel laden" textFill="LIME" GridPane.rowIndex="1">
                      <font>
                         <Font name="Monospaced Regular" size="30.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Tutorial" textFill="LIME" GridPane.rowIndex="2">
+                  <Button mnemonicParsing="false" onAction="#quitGameMenu" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Quit" textFill="LIME" GridPane.rowIndex="4">
                      <font>
                         <Font name="Monospaced Regular" size="30.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#quitGameMenu" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Quit" textFill="LIME" GridPane.rowIndex="3">
-                     <font>
-                        <Font name="Monospaced Regular" size="30.0" />
-                     </font>
-                  </Button>
+                  <GridPane GridPane.rowIndex="2">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" percentWidth="20.0" />
+                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" />
+                        <ColumnConstraints halignment="LEFT" hgrow="NEVER" />
+                        <ColumnConstraints halignment="CENTER" hgrow="NEVER" percentWidth="2.0" />
+                      <ColumnConstraints halignment="CENTER" hgrow="NEVER" />
+                        <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" />
+                      <ColumnConstraints hgrow="SOMETIMES" percentWidth="20.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label text="Chapter:" textFill="LIME" GridPane.columnIndex="1">
+                           <font>
+                              <Font name="Monospaced Regular" size="24.0" />
+                           </font>
+                        </Label>
+                        <Label text="Oase des Anfangs" textFill="LIME" GridPane.columnIndex="5">
+                           <font>
+                              <Font name="Monospaced Regular" size="24.0" />
+                           </font>
+                        </Label>
+                        <Label text="Standort:" textFill="LIME" GridPane.columnIndex="4">
+                           <font>
+                              <Font name="Monospaced Regular" size="24.0" />
+                           </font>
+                        </Label>
+                        <Label text="0" textFill="LIME" GridPane.columnIndex="2">
+                           <font>
+                              <Font name="Monospaced Regular" size="24.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </GridPane>
                </children>
             </GridPane>
          </children>
