--- a/src/main/resources/fxml/soki-menu.fxml
+++ b/src/main/resources/fxml/soki-menu.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -9,61 +8,90 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="630.0" prefWidth="920.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="soki.textadventure.controller.MenuController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="815.0" prefWidth="1169.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="soki.textadventure.controller.MenuController">
    <children>
-      <GridPane layoutX="1.0" layoutY="1.0" prefHeight="630.0" prefWidth="920.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="1.0">
+      <GridPane layoutX="1.0" layoutY="1.0" prefHeight="815.0" prefWidth="1169.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="10.0" minWidth="10.0" prefWidth="10.0" />
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="10.0" minWidth="10.0" prefWidth="10.0" />
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints maxHeight="205.0" minHeight="10.0" prefHeight="27.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="215.0" minHeight="5.0" prefHeight="132.0" vgrow="NEVER" />
-            <RowConstraints maxHeight="205.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="437.0" minHeight="10.0" prefHeight="415.0" vgrow="NEVER" />
-          <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" vgrow="NEVER" />
+            <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" vgrow="NEVER" />
+          <RowConstraints maxHeight="258.0" minHeight="5.0" prefHeight="208.0" vgrow="NEVER" />
+            <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" vgrow="NEVER" />
+          <RowConstraints vgrow="ALWAYS" />
+          <RowConstraints maxHeight="78.0" minHeight="-Infinity" prefHeight="38.0" vgrow="NEVER" />
         </rowConstraints>
          <children>
-            <Label alignment="CENTER" prefHeight="78.0" prefWidth="152.0" text="SOKI" textAlignment="CENTER" textFill="LIME" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <Label alignment="CENTER" text="SOKI" textAlignment="CENTER" textFill="LIME" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <font>
-                  <Font name="Monospaced Regular" size="48.0" />
+                  <Font name="Monospaced Regular" size="120.0" />
                </font>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
             </Label>
             <GridPane GridPane.columnIndex="1" GridPane.rowIndex="3">
               <columnConstraints>
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+                  <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints percentHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints prefHeight="50.0" vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button mnemonicParsing="false" onAction="#LoadGameMenu" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Load Game" textFill="LIME">
+                  <Button mnemonicParsing="false" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Neues Spiel" textFill="LIME">
                      <font>
-                        <Font name="Monospaced Regular" size="24.0" />
+                        <Font name="Monospaced Regular" size="30.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="New Game" textFill="LIME" GridPane.rowIndex="1">
+                  <Button mnemonicParsing="false" onAction="#LoadGameMenu" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Spiel laden" textFill="LIME" GridPane.rowIndex="1">
                      <font>
-                        <Font name="Monospaced Regular" size="24.0" />
+                        <Font name="Monospaced Regular" size="30.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Tutorial" textFill="LIME" GridPane.rowIndex="2">
+                  <Button mnemonicParsing="false" onAction="#quitGameMenu" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Quit" textFill="LIME" GridPane.rowIndex="4">
                      <font>
-                        <Font name="Monospaced Regular" size="24.0" />
+                        <Font name="Monospaced Regular" size="30.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#quitGameMenu" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Quit" textFill="LIME" GridPane.rowIndex="3">
-                     <font>
-                        <Font name="Monospaced Regular" size="24.0" />
-                     </font>
-                  </Button>
+                  <GridPane GridPane.rowIndex="2">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" percentWidth="20.0" />
+                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" />
+                        <ColumnConstraints halignment="LEFT" hgrow="NEVER" />
+                        <ColumnConstraints halignment="CENTER" hgrow="NEVER" percentWidth="2.0" />
+                      <ColumnConstraints halignment="CENTER" hgrow="NEVER" />
+                        <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" />
+                      <ColumnConstraints hgrow="SOMETIMES" percentWidth="20.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label text="Chapter:" textFill="LIME" GridPane.columnIndex="1">
+                           <font>
+                              <Font name="Monospaced Regular" size="24.0" />
+                           </font>
+                        </Label>
+                        <Label text="Oase des Anfangs" textFill="LIME" GridPane.columnIndex="5">
+                           <font>
+                              <Font name="Monospaced Regular" size="24.0" />
+                           </font>
+                        </Label>
+                        <Label text="Standort:" textFill="LIME" GridPane.columnIndex="4">
+                           <font>
+                              <Font name="Monospaced Regular" size="24.0" />
+                           </font>
+                        </Label>
+                        <Label text="0" textFill="LIME" GridPane.columnIndex="2">
+                           <font>
+                              <Font name="Monospaced Regular" size="24.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </GridPane>
                </children>
             </GridPane>
          </children>
