--- a/src/main/resources/fxml/soki-menu.fxml
+++ b/src/main/resources/fxml/soki-menu.fxml
@@ -2,13 +2,15 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="815.0" prefWidth="1169.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="soki.textadventure.controller.MenuController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="815.0" prefWidth="1169.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="soki.textadventure.controller.MenuController">
    <children>
       <GridPane layoutX="1.0" layoutY="1.0" prefHeight="815.0" prefWidth="1169.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
@@ -24,11 +26,11 @@
           <RowConstraints maxHeight="78.0" minHeight="-Infinity" prefHeight="38.0" vgrow="NEVER" />
         </rowConstraints>
          <children>
-            <Label alignment="CENTER" text="SOKI" textAlignment="CENTER" textFill="LIME" GridPane.columnIndex="1" GridPane.rowIndex="1">
-               <font>
-                  <Font name="Monospaced Regular" size="120.0" />
-               </font>
-            </Label>
+            <ImageView fitHeight="347.0" fitWidth="576.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <image>
+                  <Image url="@logos/SOKILogo.png" />
+               </image>
+            </ImageView>
             <GridPane GridPane.columnIndex="1" GridPane.rowIndex="3">
               <columnConstraints>
                 <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
@@ -41,7 +43,7 @@
                 <RowConstraints vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button mnemonicParsing="false" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Neues Spiel" textFill="LIME" onAction="#openNewGame">
+                  <Button mnemonicParsing="false" onAction="#openNewGame" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Neues Spiel" textFill="LIME">
                      <font>
                         <Font name="Monospaced Regular" size="30.0" />
                      </font>
@@ -85,7 +87,7 @@
                               <Font name="Monospaced Regular" size="24.0" />
                            </font>
                         </Label>
-                        <Label text="0" fx:id="playerChapterLabel" textFill="LIME" GridPane.columnIndex="2">
+                        <Label fx:id="playerChapterLabel" text="0" textFill="LIME" GridPane.columnIndex="2">
                            <font>
                               <Font name="Monospaced Regular" size="24.0" />
                            </font>
